check username endpoint
