# docs/swagger.json
@@ -17,6 +17,43 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
+        "/api/auth/check-username/": {
+            "get": {
+                "description": "Check if username exists or not",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Check username",
+                "parameters": [
+                    {
+                        "description": "DBResponse",
+                        "name": "DBResponse",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.DBResponse"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/auth/forgot-password": {
             "post": {
                 "description": "ForgotPassword",
@@ -626,12 +663,14 @@
         "models.SignInInput": {
             "type": "object",
             "required": [
-                "email",
-                "password"
+                "email"
             ],
             "properties": {
                 "email": {
                     "type": "string"
+                },
+                "from_google": {
+                    "type": "boolean"
                 },
                 "password": {
                     "type": "string"
